[package]
name = "lotus-p1"
version = "0.2.0"
authors = ["yangdonglin <332407470@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filecoin-proofs = { features = ["gpu"], path = "../rust-fil-proofs/filecoin-proofs" }
log = "*"
backtrace = "*"
env_logger = "*"
serde_json = "*"
anyhow = { version = "*", features = ["backtrace"] }
serde = { version = "1.0", features = ["rc", "derive"] }


[patch.crates-io]
bellperson = { path = "../my-bellman" }
neptune = { path = "../my-neptune" }
phase21 = { git = "https://github.com/Krysme/phase2", branch = "master" }
