[package]
name = "lotus-c2"
version = "0.2.0"
authors = ["yangdonglin <332407470@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#filecoin-proofs = { features = ["gpu"], git = "https://github.com/wellhealth/rust-fil-proofs", branch = "c2-v8" }
filecoin-proofs = { features = ["gpu"], path = "../rust-fil-proofs/filecoin-proofs" }

storage-proofs-core = { path = "../rust-fil-proofs/storage-proofs-core", version = "^8.0.0", default-features = false}
log = "*"
backtrace = "*"
env_logger = "*"
serde_json = "*"
anyhow = { version = "*", features = ["backtrace"] }
serde = { version = "1.0", features = ["rc", "derive"] }


[patch.crates-io]
# bellperson = { git = "https://github.com/15012700225/my-bellman.git", branch = "c2-v8" }
# neptune = { git = "https://github.com/15012700225/my-neptune", branch = "c2" }
# phase21 = { git = "https://github.com/Krysme/phase2", branch = "master" }
